--- a/style/style.css
+++ b/style/style.css
@@ -345,3 +345,57 @@ hr {
     color: #009688;
     margin: 10px;
 }
+/*responsive*/
+@media only screen and (max-width:740px) {
+    .banner-text{
+       padding-top: 100px;
+    }
+    .banner-text h1{
+        font-size: 30px;
+    }
+    #banner {
+        box-sizing: border-box;
+        width: 100%;
+        height: 300px;
+    }
+    /**/
+    .features{
+        flex-basis: 100%;
+    }
+    .features-img img{
+        width: 100%;
+    }
+    /**/
+    .service-box{
+        display: inline;
+    }
+    /**/
+    .testimonial-col{
+        flex-basis: 100%;
+    }
+    /**/
+    .footer-left{
+        flex-basis: 100%;
+        text-align: left;
+    }
+    .footer-right{
+        flex-basis: 100%;
+        text-align: right;
+    }
+    /**/
+    #menubtn{
+        width: 30px;
+        height: 30px;
+    }
+    #menubtn img{
+        margin-top: 5px;
+    }
+    #sidenav {
+        width: 150px;
+        height: 50vh;
+    }
+    /* font size*/
+    .title-text h1{
+        font-size: 30px;
+    }
+}
